fix: overflow body

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ html,
   background: #000; 
   color: #fff; 
   font-size: 16px; 
+  overflow: hidden;
   overscroll-behavior-y: contain;
 }
 #popupContentInMap {
